...
"ADMIN" = "Admin";
"MODERATOR" = "Moderator";
"PARTICIPANT" = "Participant";
"BLOCKED_USERS" = "Blocked Users";
"EVERYBODY" = "Everybody";
"PREFERENCES" = "Preferences";
"MEMBERS" = "Members";
"MEMBER" = "Member";
"CANCEL" = "Cancel";
"TODAY" = "Today";
"YESTERDAY" = "Yesterday";
"PHOTO_VIDEO_LIBRARY" = "Photo & Video Library";
"TAKE_A_PHOTO" = "Take a Photo";
...
"DELETE_MESSAGE" = "Delete";
"COLLABORATIVE_WHITEBOARD" = "Collaborative Whiteboard";
"TYPE_A_MESSAGE" = "Type a Message here";
"TYPING" = "Typing...";
"IS_TYPING" = "is typing...";
"UNBLOCK" = "Unblock";
"OWNER" = "Owner";
"OK" = "OK";
"ADD_MEMBERS" = "Add Members";
"BAN_MEMBER" = "Ban Member";
"UNBAN_MEMBER" = "Unban Member";
"FORWARD_MESSAGE" = "Forward Message";
"ONE_REPLY" = "1 reply";
...
"NAME" = "Name";
"ENTER_GROUP_NAME" = "Enter the group name";
"ENTER_PASSWORD" = "Enter the password";
"CREATE_GROUP" = "Create Group";
"EMPTY_GROUP_NAME_ERROR" = "Group name cannot be empty";
"EMPTY_PASSWORD_ERROR" = "Password cannot be empty for a password-protected group";
"VIEW_MEMBERS" = "View Members";
"BANNED_MEMBERS" = "Banned Members";
"DELETE_AND_EXIT" = "Delete and Exit";
"GROUP_INFO" = "Group Info";
"CONFIRM_DELETE_AND_EXIT_GROUP_ALERT" = "Are you sure you want to delete this chat and exit the group? This action cannot be undone.";
"DELETE_AND_EXIT_QUESTION_MARK" = "Delete and Exit?";
"TRANSFER_OWNERSHIP_ALERT" = "You need to transfer ownership of this group to another group member before leaving this ground.";
...
"a11y_rerecord" = "Record again";
"a11y_image_message" = "Image message";
"a11y_video_message" = "Video message";
"AGENT_BADGE_LABEL" = "AI";
"AGENT_MESSAGE_PREVIEW" = "AI Response";
"AVIALABLE" = "Available";
"BAN" = "Ban";
"BANNED_FROM_GROUP" = "You have been banned from this group.";
"BAN_MEMBER_ALERT" = "Are you sure you want to ban";
"DONE" = "Done";
"FROM_THIS_GROUP_TEXT" = "from this group";
"HARASSMENT_BULLYING" = "Harassment / Bullying";
"HAS_SENT_A_CALL" = "has sent a call";
"HAS_SHARED_A_STICKER" = "has shared a sticker";
"KICK" = "Kick";
"KICK_MEMBER" = "Kick Member";
"KICK_MEMBER_ALERT" = "Are you sure you want to kick";
"REPLY" = "Reply";
"REPLY_TO_MESSAGE" = "Reply to Message";
"SCOPE" = "Scope";
"SEXUAL_CONTENT" = "Sexual Content";
...
